<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:paddingTop="47dp"
        android:paddingBottom="31dp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logoutbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="@string/logout"
            android:textColor="@color/blue_primary"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sourcesansproregular"
            android:gravity="center"
            android:text="@string/logout2"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvYes"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/cream"
            android:elevation="2dp"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            app:cardBackgroundColor="@color/cream"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sourcesansprosemibold"
                android:text="@string/yesLogout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvNo"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/statusBlue"
            android:elevation="2dp"
            android:paddingVertical="10dp"
            app:cardBackgroundColor="@color/statusBlue"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvYes">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sourcesansprosemibold"
                android:text="@string/noLogout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>