<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_backbutton"
    android:elevation="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="20dp"
    android:id="@+id/backButton"
    android:layout_marginTop="10dp"
    tools:targetApi="lollipop" />
        <ImageView
            android:id="@+id/ivSatu"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="H,4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSatu" />

        <ImageView
            android:id="@+id/ivcategory"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_categoryrequest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvImage" />

        <TextView
            android:id="@+id/tvCategoryComplain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="asd"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvImage" />

        <TextView
            android:id="@+id/titlepermintaan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="Isi :"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvImage" />

        <TextView
            android:id="@+id/tvrequestcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sourcesansproregular"
            android:text="@string/logout2"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/titlepermintaan" />

        <TextView
            android:id="@+id/detaillokasititle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="Detail Lokasi"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvrequestcontent" />

<!--        <fragment-->
<!--            android:id="@+id/googleMapRequest"-->
<!--            android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="240dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/detaillokasititle" />-->

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="asd"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/detaillokasititle"/>

<!--            app:layout_constraintTop_toBottomOf="@id/googleMapRequest"-->
        <TextView
            android:id="@+id/tvdetilAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/sourcesansproregular"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvAlamat" />

        <RelativeLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="19dp"
            android:background="@color/blue_primary"
            app:layout_constraintTop_toBottomOf="@id/tvdetilAlamat" />

        <TextView
            android:id="@+id/detailrequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="Detail "
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/titleNomorAduan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sourcesansproregular"
            android:text="Nomor Tiket"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailrequest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesansproregular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleNomorAduan"
            android:id="@+id/tvNomorAduan"/>
        <TextView
            android:id="@+id/titletanggaldanjam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sourcesansproregular"
            android:text="@string/tanggaldanjam"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNomorAduan" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesansproregular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titletanggaldanjam"
            android:id="@+id/tvTanggaldanjamMasuk"/>
        <TextView
            android:id="@+id/titleAlamatProperti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sourcesansproregular"
            android:text="@string/alamatProperti"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTanggaldanjamMasuk" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesansproregular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="******"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleAlamatProperti"
            android:id="@+id/tvAlamatProperti"/>

        <RelativeLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="19dp"
            android:background="@color/blue_primary"
            app:layout_constraintTop_toBottomOf="@id/tvAlamatProperti" />
        <TextView
            android:id="@+id/statusAduan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="Status "
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/line2" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cvStatusAduan"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:layout_marginEnd="20dp"

            app:cardBackgroundColor="@color/blue_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Terkirim"
                android:id="@+id/tvStatus"
                android:fontFamily="@font/sourcesansproregular"
                android:textSize="12sp"
android:layout_marginVertical="3dp"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvStatusAduan"
                    android:layout_marginTop="17dp"

                android:layout_marginBottom="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/rvStatusAduan"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>